--- a/static/index.html
+++ b/static/index.html
@@ -24,6 +24,7 @@
           <input type="radio" id="private" /> <label for="html">Private</label>
           <input type="radio" id="public" /> <label for="html">Public</label>
           <button id="create-button" type="button">Create</button>
+          <div id="data"></div>
 
           <!-- Här ska det skapas själv inte hardcodas -->
           <!-- <div> welcome </div>
