6. Change and login
Make channels div separated now but still not done with validate and the post method
login created auth database in json and connect to file, created controller for users and channel
now still use get method instead of post but its working just not property, it return Unauthorized on insomnia

--- a/static/index.html
+++ b/static/index.html
@@ -21,10 +21,10 @@
 
           <h2>Channels</h2>
           <input id="create-channels" type="text" placeholder="Channels name..." />
-          <input type="radio" id="private" /> <label for="html">Private</label>
-          <input type="radio" id="public" /> <label for="html">Public</label>
+          <input type="radio" id="radio-private" /> <label for="radio-private" id="label-private">Private</label>
+          <input type="radio" id="radio-public" /> <label for="radio-public" id="label-public">Public</label>
           <button id="create-button" type="button">Create</button>
-          <div id="data"></div>
+
 
           <!-- Här ska det skapas själv inte hardcodas -->
           <!-- <div> welcome </div>
