--- a/static/index.html
+++ b/static/index.html
@@ -35,22 +35,24 @@
         </div>
         <div class="separator"></div>
         <div class="auth">
-          <!-- Här ska det visas efter man har loggar in -->
-          <!-- <div class="profile">
+
+          <div class="profile">
             <div class="avatar"></div>
-            Edgar Djikstra
-          </div> 
+            <h3 id="welcomeMessage"></h3>
+            <button id="logoutBtn">Sign out</button>
+          </div>
 
-          <button>Sign out</button> -->
+          <div class="login-form">
+            <p>Login</p>
+            <input type="text" id="username" placeholder="Username..." />
+            <input type="password" id="password" placeholder="Password...">
+            <!--   <i class="fa fa-eye password-toggle"></i> -->
+            <button id="loginBtn">Sign in</button>
+          </div>
 
-          <p>Login</p>
-          <input type="text" value="" placeholder="Username..." />
-          <input type="password" value="" placeholder="Password...">
-          <button> Sign in </button>
-
-          <!-- samt registrera ny användare. -->
         </div>
       </div>
+
 
       <div class="right">
         <!-- Här ska det göras från js -->
@@ -62,7 +64,6 @@
           <div class="message one framed"> Wow </div>
           <div class="message one framed"> Det är högt </div>
           <div class="message three framed"> Varför pratar ingen om tvättbjörnar?? </div>
- -->
         </div>
 
         <div class="message-form">
