--- a/static/index.html
+++ b/static/index.html
@@ -35,6 +35,16 @@
         </div>
         <div class="separator"></div>
         <div class="auth">
+          <p>Choose Option</p>
+          <button id="show-register">Register</button> </br>
+          <button id="show-login">Login</button>
+          <div class="register-form">
+            <p>Register</p>
+            <input type="text" id="registerUsername" placeholder="Username">
+            <input type="password" id="registerPassword" placeholder="Password">
+            <input type="password" id="confirmPassword" placeholder="Confirm Password">
+            <button id="registerBtn">Register</button>
+          </div>
 
           <div class="profile">
             <div class="avatar"></div>
