--- a/static/index.html
+++ b/static/index.html
@@ -27,10 +27,10 @@
 
 
           <!-- Här ska det skapas själv inte hardcodas -->
-          <!-- <div> welcome </div>
-          <div class="selected"> animal facts</div>
-          <div> 🔓 work</div>
-          <div> random </div> -->
+          <!--   <<div> welcome </div> -->
+          <div class="selected" tabindex="0"> animal facts</div> <!--  -->
+          <!--  <div> 🔓 work</div>
+          <div> random </div>  -->
 
         </div>
         <div class="separator"></div>
@@ -66,10 +66,10 @@
 
       <div class="right">
         <!-- Här ska det göras från js -->
-        <!-- <div class="right-heading"> animal facts </div> -->
+        <div class="right-heading"> animal facts </div>
         <div class="message-list framed">
           <!-- Meddelandet ska hanteras av js -->
-          <!-- <div class="message one framed"> Giraffer är fascinerande djur </div>
+          <div class="message one framed"> Giraffer är fascinerande djur </div>
           <div class="message two framed"> Visste du att giraffer kan bli 6 meter höga? </div>
           <div class="message one framed"> Wow </div>
           <div class="message one framed"> Det är högt </div>
