--- a/static/index.html
+++ b/static/index.html
@@ -72,12 +72,13 @@
 
 
 
-          <!-- Meddelandet ska hanteras av js -->
+          <!-- Meddelandet ska hanteras av js 
           <div class="message one framed"> Giraffer är fascinerande djur </div>
           <div class="message two framed"> Visste du att giraffer kan bli 6 meter höga? </div>
           <div class="message one framed"> Wow </div>
           <div class="message one framed"> Det är högt </div>
-          <div class="message three framed"> Varför pratar ingen om tvättbjörnar?? </div>
+           -->
+
         </div>
 
         <div class="message-form">
