--- a/static/index.html
+++ b/static/index.html
@@ -18,13 +18,13 @@
 
       <div class="left">
         <div class="channels">
-
-          <h2>Channels</h2>
-          <input id="create-channels" type="text" placeholder="Channels name..." />
-          <input type="radio" id="radio-private" /> <label for="radio-private" id="label-private">Private</label>
-          <input type="radio" id="radio-public" /> <label for="radio-public" id="label-public">Public</label>
-          <button id="create-button" type="button">Create</button>
-
+          <div class="channels-form">
+            <h2>Channels</h2>
+            <input id="create-channels" type="text" placeholder="Channels name..." />
+            <input type="radio" id="radio-private" /> <label for="radio-private" id="label-private">Private</label>
+            <input type="radio" id="radio-public" /> <label for="radio-public" id="label-public">Public</label>
+            <button id="create-button" type="button">Create</button>
+          </div>
           <h3>Choose your Chat Channels</h3>
 
           <!-- Här ska det skapas själv inte hardcodas -->
