--- a/static/index.html
+++ b/static/index.html
@@ -36,7 +36,7 @@
         </div>
         <div class="separator"></div>
         <div class="auth">
-          <p>Choose Option</p>
+          <p id="p-option">Choose Option</p>
           <button id="show-register">Register</button> </br>
           <button id="show-login">Login</button>
           <div class="register-form">
