--- a/static/index.html
+++ b/static/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script type="module" src="script.js" defer></script>
+    <script src="script.js" defer></script>
     <title>Secure Chat</title>
   </head>
 
@@ -28,11 +28,6 @@
           </div>
           <h3>Choose your Chat Channels</h3>
 
-          <!-- Här ska det skapas själv inte hardcodas -->
-          <!--   <<div> welcome </div> -->
-          <!--   <div class="selected"> animal facts</div> 
-         <div> 🔓 work</div>
-          <div> random </div>  -->
 
         </div>
         <div class="separator"></div>
@@ -58,7 +53,6 @@
             <p id="login-p"></p>
             <input type="text" id="username" placeholder="Username..." />
             <input type="password" id="password" placeholder="Password...">
-            <!--   <i class="fa fa-eye password-toggle"></i> -->
             <button id="loginBtn">Sign in</button>
           </div>
 
@@ -74,8 +68,6 @@
         </div>
 
         <div class="message-form">
-          <!-- Beror på vem som loggar in -->
-          <!--  <div class="avatar"></div> -->
           <input type="text" placeholder="Type your message..." id="message-input" />
           <button type="button" id="send-button"> Send </button>
         </div>
