--- a/static/index.html
+++ b/static/index.html
@@ -37,6 +37,7 @@
           <button id="show-login">Login</button>
           <div class="register-form">
             <p class="p-option">Register</p>
+            <p id="login-p"></p>
             <input type="text" id="registerUsername" placeholder="Username">
             <input type="password" id="registerPassword" placeholder="Password">
             <input type="password" id="confirmPassword" placeholder="Confirm Password">
@@ -45,7 +46,7 @@
 
           <div class="profile">
             <h3 id="welcomeMessage"></h3>
-            <button id="logoutBtn">Sign out</button>
+            <button id="logoutBtn">Logout</button>
           </div>
 
           <div class="login-form">
